--- a/src/index.html
+++ b/src/index.html
@@ -109,6 +109,15 @@
     </style>
 	</head>
 	<body>
+		
+		
+<div class="login-container">
+      <h2>Login</h2>
+      <div class="error-message" id="error-message">Invalid username or password.</div>
+      <input type="text" id="username" placeholder="Username">
+      <input type="password" id="password" placeholder="Password">
+      <button onclick="login()">Login</button>
+    </div>
 		<noscript>
 			<main>
 				<p>Please enable Javascript in order to use all functions of Manifest.</p>
