--- a/src/index.html
+++ b/src/index.html
@@ -108,32 +108,67 @@
       }
     </style>
 	</head>
-	<body>
-		
-		
-<div class="login-container">
-      <h2>Login</h2>
-      <div class="error-message" id="error-message">Invalid username or password.</div>
-      <input type="text" id="username" placeholder="Username">
-      <input type="password" id="password" placeholder="Password">
-      <button onclick="login()">Login</button>
-    </div>
+		<body>
+		<div class="login-container" id="login-container">
+			<h2>Login</h2>
+			<div class="error-message" id="error-message">Invalid username or password.</div>
+			<input type="text" id="username" placeholder="Username">
+			<input type="password" id="password" placeholder="Password">
+			<button onclick="login()">Login</button>
+		</div>
+
 		<noscript>
 			<main>
 				<p>Please enable Javascript in order to use all functions of Manifest.</p>
 			</main>
 		</noscript>
-		
+
 		<script type="module">
-			if ("serviceWorker" in navigator) {
-				navigator.serviceWorker.register(new URL("service-worker.js", import.meta.url), { type: "module" }).then(function (serviceWorker) {
-					console.log("Service Worker registered.");
-					console.log(serviceWorker);
-				}).catch(function (error) {
-					console.log("Error registering the Service Worker.");
-					console.log(error);
-				});
+			// Function to get a cookie by name
+			function getCookie(name) {
+				let match = document.cookie.match(new RegExp('(^| )' + name + '=([^;]+)'));
+				if (match) return match[2];
+				return null;
 			}
+
+			// Function to create a cookie
+			function setCookie(name, value, days) {
+				let expires = "";
+				if (days) {
+					let date = new Date();
+					date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+					expires = "; expires=" + date.toUTCString();
+				}
+				document.cookie = name + "=" + (value || "") + expires + "; path=/";
+			}
+
+			// Function to check authentication status
+			function checkAuth() {
+				const authCookie = getCookie('auth');
+				if (authCookie === 'authenticated') {
+					document.body.innerHTML = '<script type="module" src="./js/index.js"></script>';
+				}
+			}
+
+			// Login function
+			function login() {
+				const username = document.getElementById('username').value;
+				const password = document.getElementById('password').value;
+
+				if (username === 'root' && password === 'toor') {
+					// Authentication successful
+					setCookie('auth', 'authenticated', 7); // Set authentication cookie for 7 days
+					document.body.innerHTML = '<script type="module" src="./js/index.js"></script>';
+				} else {
+					// Authentication failed
+					const errorMessage = document.getElementById('error-message');
+					errorMessage.style.display = 'block';
+				}
+			}
+
+			// Check authentication status on page load
+			checkAuth();
+
 		</script>
-  	</body>
+	</body>
 </html>
