--- a/src/index.html
+++ b/src/index.html
@@ -62,87 +62,24 @@
 
 		<!-- Web Manifest  -->
 		<link rel="manifest" href="./manifest.webmanifest">
-
-		<style>
-      body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-        font-family: Arial, sans-serif;
-        background-color: #f0f0f0;
-      }
-      .login-container {
-        background-color: white;
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
-      .login-container h2 {
-        margin-bottom: 20px;
-      }
-      .login-container input {
-        width: 70%;
-        padding: 10px;
-        margin-bottom: 10px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-      }
-      .login-container button {
-        width: 70%;
-        padding: 10px;
-        background-color: #007BFF;
-        color: white;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-      }
-      .login-container button:hover {
-        background-color: #0056b3;
-      }
-      .error-message {
-        color: red;
-        margin-bottom: 10px;
-        display: none;
-      }
-    </style>
 	</head>
-		<body>
-	<div class="login-container" id="login-container">
-		<h2>Login</h2>
-		<div class="error-message" id="error-message" style="display: none;">Invalid username or password.</div>
-		<input type="text" id="username" placeholder="Username">
-		<input type="password" id="password" placeholder="Password">
-		<button onclick="login()">Login</button>
-	</div>
-
-	<noscript>
-		<main>
-			<p>Please enable Javascript in order to use all functions of Manifest.</p>
-		</main>
-	</noscript>
-
-	<script type="module">
-		function login() {
-			const username = document.getElementById('username').value;
-			const password = document.getElementById('password').value;
-
-			if (username === 'root' && password === 'toor') {
-				// Authentication successful
-				document.getElementById('login-container').style.display = 'none'; // Hide login form
-				// Dynamically load the script
-				const script = document.createElement('script');
-				script.type = 'module';
-				script.src = './js/index.js';
-				document.body.appendChild(script); // Append the script to the body
-			} else {
-				// Authentication failed
-				const errorMessage = document.getElementById('error-message');
-				errorMessage.style.display = 'block'; // Show error message
+	<body>
+		<noscript>
+			<main>
+				<p>Please enable Javascript in order to use all functions of Manifest.</p>
+			</main>
+		</noscript>
+		<script type="module" src="./js/index.js"></script>
+		<script type="module">
+			if ("serviceWorker" in navigator) {
+				navigator.serviceWorker.register(new URL("service-worker.js", import.meta.url), { type: "module" }).then(function (serviceWorker) {
+					console.log("Service Worker registered.");
+					console.log(serviceWorker);
+				}).catch(function (error) {
+					console.log("Error registering the Service Worker.");
+					console.log(error);
+				});
 			}
-		}
-	</script>
-</body>
-
+		</script>
+  	</body>
 </html>
